BZ-1047112: tunning gwt configuration in order to prevent out of memory errors